ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-service 
  namespace: nginx-test
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "360"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "360"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "360"
    nginx.ingress.kubernetes.io/affinity: "cookie"
spec:
  defaultBackend:
    service:
      name: nginx-service
      port:
        number: 80
  tls:
  - hosts:
    - kube-test-sunil3.therealpbx.co.in
    secretName: tls-sunil3
  rules:
  - host: kube-test-sunil3.therealpbx.co.in
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
